Add ros_integration initial part

--- a/references.bib
+++ b/references.bib
@@ -744,7 +744,53 @@ Theory and practice-a survey},
 
 @misc{cite_convex_optimization_problem, 
     title={Convex optimization problem},
-    author={ByungSoo Ko},
+    author="{ByungSoo Ko}",
     year={2017},
     note={\url{https://kobiso.github.io/research/research-convex-optimization/}}
+}
+
+@article{cite_trajectory_tracking,
+    author = {Aguiar, A. Pedro and Hespanha, JoÃo P.},
+    year = {2007},
+    volume={52},
+    number={8},
+    pages={1362-1379},
+    title = {Trajectory-Tracking and Path-Following of Underactuated Autonomous Vehicles with Parametric Modeling Uncertainty},
+    doi = {10.1109/TAC.2007.902731},
+    note = {\url{http://users.isr.ist.utl.pt/~pedro/CONAV/publications/IEEETACSupervisory.pdf}}
+}
+
+@misc{cite_about_ros, 
+    title={About ROS},
+    author="{ROS Community}",
+    year={2021},
+    note={\url{https://www.ros.org/about-ros/}}
+}
+
+@misc{cite_ros_node, 
+    title={Nodes},
+    author="{ROS Community}",
+    year={2021},
+    note={\url{http://wiki.ros.org/Nodes}}
+}
+
+@misc{cite_ros_message, 
+    title={Messages},
+    author="{ROS Community}",
+    year={2021},
+    note={\url{http://wiki.ros.org/Messages}}
+}
+
+@misc{cite_ros_topic, 
+    title={Topics},
+    author="{ROS Community}",
+    year={2021},
+    note={\url{http://wiki.ros.org/Topics}}
+}
+
+@misc{cite_ros_launch, 
+    title={roslaunch},
+    author="{ROS Community}",
+    year={2021},
+    note={\url{http://wiki.ros.org/roslaunch}}
 }
